# open-agent-evals

./: .gitignore  .ignore  README.md  pyproject.toml  ruff.toml
examples/: simple.py
examples/verilogeval/: AGENTS.md  benchmark.py  main.py  pyproject.toml
site/: DESIGN.md  package.json
site/app/: page.tsx
site/app/dashboard/[id]/: page.tsx
site/components/dashboard/: runtime.tsx
site/components/dashboard/widgets/: bar-chart-widget.tsx  dashboard-grid.tsx  line-chart-widget.tsx  pie-chart-widget.tsx  table-widget.tsx  text-widget.tsx
site/components/ui/: chart.tsx
site/lib/dashboard/: catalog.ts  prompt.ts  registry.tsx  spec-service.ts  store.ts  ws-hub.ts
site/pages/api/dashboard/: [id].ts  index.ts  prompt.ts  ws.ts
site/pages/api/dashboard/[id]/: finalize.ts
site/tests/: dashboard-m8.test.ts
site/types/: next-compiled-ws.d.ts
src/oa_evals/: __init__.py  logging.py
src/oa_evals/acp/: __init__.py  builder.py  client.py  exceptions.py  model.py  prompt.py  schema.py  types.py
src/oa_evals/cli/: app.py
src/oa_evals/cli/templates/: benchmark.py.j2  benchmark_agents.md.j2
src/oa_evals/grader/: __init__.py  abc.py  exceptions.py  model.py  schema.py
src/oa_evals/harness/: __init__.py  exceptions.py  main.py  model.py  schema.py
src/oa_evals/metric/: __init__.py  abc.py  exceptions.py  model.py  schema.py
src/oa_evals/metric/builtin/: __init__.py  file.py  pass_k.py  transcript.py
src/oa_evals/sandbox/: __init__.py  abc.py  exceptions.py  schema.py
src/oa_evals/sandbox/container/: __init__.py  impl.py  utils.py
src/oa_evals/sandbox/e2b/: __init__.py  impl.py
src/oa_evals/task/: __init__.py  abc.py  exceptions.py  model.py  runner.py
src/oa_evals/task/templates/: Containerfile.default.j2
src/oa_evals/utils/: process.py  sync.py
tests/oa_evals/acp/: test_builder.py  test_openai_builder.py
